--- a/.github/workflows/daily_sign.yml
+++ b/.github/workflows/daily_sign.yml
@@ -6,7 +6,7 @@ name: 签到薅羊毛
 on:
   schedule:
     # 此处是UTC时间，对应北京时间早八点
-    - cron : '*/3 * * * *'
+    - cron : '25 5 * * *'
   workflow_dispatch:
 
 permissions:
